<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activitys.LoginActivity">


    <ImageView
        android:id="@+id/imageTitleBackGround"
        android:layout_width="297dp"
        android:layout_height="75dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="80dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/image2" />

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="297dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/inter_extrabold"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="#FFFFFFFF"
        android:textSize="@dimen/very_big_text"
        app:layout_constraintEnd_toEndOf="@+id/imageTitleBackGround"
        app:layout_constraintStart_toStartOf="@+id/imageTitleBackGround"
        app:layout_constraintTop_toTopOf="@+id/imageTitleBackGround" />

    <ImageView
        android:id="@+id/imageViewLoginBackGround"
        android:layout_width="231dp"
        android:layout_height="300dp"
        android:layout_marginStart="88dp"
        android:layout_marginTop="60dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageTitleBackGround"
        app:srcCompat="@drawable/image3" />

    <TextView
        android:id="@+id/textViewSignInTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="76dp"
        android:layout_marginTop="7dp"
        android:fontFamily="@font/inter_bold"
        android:text="@string/login_in"
        android:textColor="#FFFFFFFF"
        android:textSize="@dimen/very_big_text"
        app:layout_constraintStart_toStartOf="@+id/imageViewLoginBackGround"
        app:layout_constraintTop_toTopOf="@+id/imageViewLoginBackGround" />

    <ImageView
        android:id="@+id/imageViewLoginType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/imageViewLoginBackGround"
        app:layout_constraintTop_toBottomOf="@+id/textViewSignInTitle"
        android:layout_marginTop="26dp"
        android:layout_marginLeft="35dp"
        app:srcCompat="@drawable/image4" />

    <EditText
        android:id="@+id/editTextLogin"
        android:layout_width="155dp"
        android:layout_height="42dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="68dp"
        android:background="@null"
        android:ems="10"
        android:textSize="13dp"
        android:fontFamily="@font/inter_bold"
        android:inputType="text"
        android:textColor="@color/edoctor_blue"
        app:layout_constraintStart_toStartOf="@+id/imageViewLoginBackGround"
        app:layout_constraintTop_toTopOf="@+id/imageViewLoginBackGround" />

    <TextView
        android:id="@+id/textViewLogin"
        android:layout_width="39dp"
        android:layout_height="16dp"
        android:textSize="@dimen/middle_text"
        android:textColor="@color/white"
        android:text="@string/login"
        android:fontFamily="@font/inter_bold"
        android:layout_marginTop="60dp"
        android:layout_marginLeft="43dp"
        app:layout_constraintStart_toStartOf="@+id/imageViewLoginBackGround"
        app:layout_constraintTop_toTopOf="@+id/imageViewLoginBackGround" />

    <ImageView
        android:id="@+id/imageViewPasswordType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/imageViewLoginBackGround"
        app:layout_constraintTop_toBottomOf="@+id/textViewSignInTitle"
        android:layout_marginTop="75dp"
        android:layout_marginLeft="35dp"
        app:srcCompat="@drawable/image4" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="155dp"
        android:layout_height="42dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="119dp"
        android:background="@null"
        android:ems="10"
        android:fontFamily="@font/inter_bold"
        android:textSize="13dp"
        android:inputType="text"
        android:textColor="@color/edoctor_blue"
        app:layout_constraintStart_toStartOf="@+id/imageViewLoginBackGround"
        app:layout_constraintTop_toTopOf="@+id/imageViewLoginBackGround" />

    <TextView
        android:id="@+id/textViewPassword"
        android:layout_width="51dp"
        android:layout_height="17dp"
        android:textSize="@dimen/middle_text"
        android:textColor="@color/white"
        android:text="@string/password"
        android:fontFamily="@font/inter_bold"
        android:layout_marginTop="110dp"
        android:layout_marginLeft="43dp"
        app:layout_constraintStart_toStartOf="@+id/imageViewLoginBackGround"
        app:layout_constraintTop_toTopOf="@+id/imageViewLoginBackGround" />

    <TextView
        android:id="@+id/textViewRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginTop="280dp"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/inter_bold"
        android:textSize="@dimen/middle_text"
        android:textColor="@color/white"
        android:text="@string/sign_up_login_screen"
        app:layout_constraintStart_toStartOf="@+id/imageViewLoginBackGround"
        app:layout_constraintTop_toTopOf="@+id/imageViewLoginBackGround" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonLogin"
        android:layout_width="120dp"
        android:layout_height="47dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="184dp"
        android:fontFamily="@font/inter_bold"
        android:text="@string/log_in_button"
        android:textColor="@color/edoctor_blue"
        android:textSize="@dimen/middle_text"
        app:backgroundTint="@android:color/white"
        app:cornerRadius="30dp"
        app:layout_constraintStart_toStartOf="@+id/imageViewLoginBackGround"
        app:layout_constraintTop_toTopOf="@+id/imageViewLoginBackGround" />


</androidx.constraintlayout.widget.ConstraintLayout>