<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">


    <ImageView
        android:id="@+id/imageTitleBackGround"
        android:layout_width="297dp"
        android:layout_height="75dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="80dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/image2" />

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter_extrabold"
        android:text="@string/app_name"
        android:textColor="#FFFFFFFF"
        android:textSize="@dimen/very_big_text"
        app:layout_constraintBottom_toBottomOf="@+id/imageTitleBackGround"
        app:layout_constraintEnd_toEndOf="@+id/imageTitleBackGround"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="@+id/imageTitleBackGround"
        app:layout_constraintTop_toTopOf="@+id/imageTitleBackGround" />

    <ImageView
        android:id="@+id/imageViewLoginBackGround"
        android:layout_width="231dp"
        android:layout_height="300dp"
        android:layout_marginStart="88dp"
        android:layout_marginTop="60dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageTitleBackGround"
        app:srcCompat="@drawable/image3" />

    <TextView
        android:id="@+id/textViewSignInTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/inter_bold"
        android:text="@string/register"
        android:textColor="#FFFFFFFF"
        android:textSize="@dimen/very_big_text"
        app:layout_constraintStart_toStartOf="@+id/imageViewLoginBackGround"
        app:layout_constraintTop_toTopOf="@+id/imageViewLoginBackGround" />

    <ImageView
        android:id="@+id/imageViewNameType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/imageViewLoginBackGround"
        app:layout_constraintTop_toBottomOf="@+id/textViewSignInTitle"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="35dp"
        app:srcCompat="@drawable/image4" />

    <EditText
        android:id="@+id/editTextName"
        android:layout_width="155dp"
        android:layout_height="42dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="58dp"
        android:background="@null"
        android:ems="10"
        android:textSize="13dp"
        android:fontFamily="@font/inter_bold"
        android:inputType="text"
        android:textColor="@color/edoctor_blue"
        app:layout_constraintStart_toStartOf="@+id/imageViewLoginBackGround"
        app:layout_constraintTop_toTopOf="@+id/imageViewLoginBackGround" />

    <TextView
        android:id="@+id/textViewName"
        android:layout_width="39dp"
        android:layout_height="16dp"
        android:textSize="@dimen/middle_text"
        android:textColor="@color/white"
        android:text="@string/fio"
        android:fontFamily="@font/inter_bold"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="43dp"
        app:layout_constraintStart_toStartOf="@+id/imageViewLoginBackGround"
        app:layout_constraintTop_toTopOf="@+id/imageViewLoginBackGround" />

    <ImageView
        android:id="@+id/imageViewPasswordType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="65dp"
        app:layout_constraintStart_toStartOf="@+id/imageViewLoginBackGround"
        app:layout_constraintTop_toBottomOf="@+id/textViewSignInTitle"
        app:srcCompat="@drawable/image4" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="155dp"
        android:layout_height="42dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="109dp"
        android:background="@null"
        android:ems="10"
        android:fontFamily="@font/inter_bold"
        android:inputType="text"
        android:textColor="@color/edoctor_blue"
        android:textSize="13dp"
        app:layout_constraintStart_toStartOf="@+id/imageViewLoginBackGround"
        app:layout_constraintTop_toTopOf="@+id/imageViewLoginBackGround" />

    <TextView
        android:id="@+id/textViewPassword"
        android:layout_width="51dp"
        android:layout_height="17dp"
        android:layout_marginLeft="43dp"
        android:layout_marginTop="100dp"
        android:fontFamily="@font/inter_bold"
        android:text="@string/password"
        android:textColor="@color/white"
        android:textSize="@dimen/middle_text"
        app:layout_constraintStart_toStartOf="@+id/imageViewLoginBackGround"
        app:layout_constraintTop_toTopOf="@+id/imageViewLoginBackGround" />

    <TextView
        android:id="@+id/textViewRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="55dp"
        android:layout_marginTop="280dp"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/inter_bold"
        android:textSize="@dimen/middle_text"
        android:textColor="@color/white"
        android:text="@string/already_have_account"
        app:layout_constraintStart_toStartOf="@+id/imageViewLoginBackGround"
        app:layout_constraintTop_toTopOf="@+id/imageViewLoginBackGround" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonLogin"
        android:layout_width="120dp"
        android:layout_height="47dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="240dp"
        android:fontFamily="@font/inter_bold"
        android:text="@string/log_in_button"
        android:textColor="@color/edoctor_blue"
        android:textSize="@dimen/middle_text"
        app:backgroundTint="@android:color/white"
        app:cornerRadius="30dp"
        app:layout_constraintStart_toStartOf="@+id/imageViewLoginBackGround"
        app:layout_constraintTop_toTopOf="@+id/imageViewLoginBackGround" />

    <ImageView
        android:id="@+id/imageViewEmailType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="114dp"
        app:layout_constraintStart_toStartOf="@+id/imageViewLoginBackGround"
        app:layout_constraintTop_toBottomOf="@+id/textViewSignInTitle"
        app:srcCompat="@drawable/image4" />

    <ImageView
        android:id="@+id/imageViewLoginType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="163dp"
        app:layout_constraintStart_toStartOf="@+id/imageViewLoginBackGround"
        app:layout_constraintTop_toBottomOf="@+id/textViewSignInTitle"
        app:srcCompat="@drawable/image4" />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="155dp"
        android:layout_height="42dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="160dp"
        android:background="@null"
        android:ems="10"
        android:fontFamily="@font/inter_bold"
        android:inputType="text"
        android:textColor="@color/edoctor_blue"
        android:textSize="13dp"
        app:layout_constraintStart_toStartOf="@+id/imageViewLoginBackGround"
        app:layout_constraintTop_toTopOf="@+id/imageViewLoginBackGround" />

    <EditText
        android:id="@+id/editTextLogin"
        android:layout_width="155dp"
        android:layout_height="42dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="208dp"
        android:background="@null"
        android:ems="10"
        android:fontFamily="@font/inter_bold"
        android:inputType="text"
        android:textColor="@color/edoctor_blue"
        android:textSize="13dp"
        app:layout_constraintStart_toStartOf="@+id/imageViewLoginBackGround"
        app:layout_constraintTop_toTopOf="@+id/imageViewLoginBackGround" />

    <TextView
        android:id="@+id/textViewEmail"
        android:layout_width="wrap_content"
        android:layout_height="17dp"
        android:layout_marginLeft="43dp"
        android:layout_marginTop="149dp"
        android:fontFamily="@font/inter_bold"
        android:text="@string/email"
        android:textColor="@color/white"
        android:textSize="@dimen/middle_text"
        app:layout_constraintStart_toStartOf="@+id/imageViewLoginBackGround"
        app:layout_constraintTop_toTopOf="@+id/imageViewLoginBackGround" />

    <TextView
        android:id="@+id/textViewLogin"
        android:layout_width="wrap_content"
        android:layout_height="17dp"
        android:layout_marginLeft="43dp"
        android:layout_marginTop="198dp"
        android:fontFamily="@font/inter_bold"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="@dimen/middle_text"
        app:layout_constraintStart_toStartOf="@+id/imageViewLoginBackGround"
        app:layout_constraintTop_toTopOf="@+id/imageViewLoginBackGround" />


</androidx.constraintlayout.widget.ConstraintLayout>