<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResetPasswordActivity">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cvTitle"
        android:layout_width="297dp"
        android:layout_height="75dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="1dp"
        android:backgroundTint="@color/edoctor_blue"
        app:cardCornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/inter_extrabold"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="@dimen/very_big_text" />
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cvMain"
        android:layout_width="231dp"
        android:layout_height="300dp"
        android:layout_marginTop="138dp"
        android:backgroundTint="@color/edoctor_blue"
        app:cardCornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cvTitle" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:fontFamily="@font/inter_bold"
                android:text="@string/email"
                android:textColor="@color/white"
                android:textSize="@dimen/middle_text"
                app:layout_constraintBottom_toTopOf="@+id/cvEmail"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/tvCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:fontFamily="@font/inter_bold"
                android:text="@string/code"
                android:textColor="@color/white"
                android:textSize="@dimen/middle_text"
                app:layout_constraintBottom_toTopOf="@+id/cvCode"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/tvNewPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:fontFamily="@font/inter_bold"
                android:text="@string/new_password"
                android:textColor="@color/white"
                android:textSize="@dimen/middle_text"
                app:layout_constraintBottom_toTopOf="@+id/cvPassword"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/tvRepeatPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:fontFamily="@font/inter_bold"
                android:text="@string/repeat_password"
                android:textColor="@color/white"
                android:textSize="@dimen/middle_text"
                app:layout_constraintBottom_toTopOf="@+id/cvRepeatPassword"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/tvSendCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_bold"
                android:text="@string/send_code"
                android:textColor="@color/white"
                android:textSize="@dimen/middle_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cvEmail" />

            <TextView
                android:id="@+id/tvRememberedPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/inter_bold"
                android:text="@string/remember_password"
                android:textColor="@color/white"
                android:textSize="@dimen/middle_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.503"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/materialButton" />

            <TextView
                android:id="@+id/tvResetTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/inter_bold"
                android:text="@string/reset"
                android:textColor="@color/white"
                android:textSize="@dimen/big_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cvEmail"
                android:layout_width="169dp"
                android:layout_height="23dp"
                android:layout_marginTop="23dp"
                android:backgroundTint="@color/white"
                app:cardCornerRadius="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvResetTitle">

                <EditText
                    android:id="@+id/edEmail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="5dp"
                    android:background="@null"
                    android:ems="10"
                    android:inputType="text"
                    android:textColor="@color/edoctor_blue"
                    android:textSize="@dimen/middle_text" />
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cvCode"
                android:layout_width="169dp"
                android:layout_height="23dp"
                android:layout_marginTop="30dp"
                android:backgroundTint="@color/white"
                app:cardCornerRadius="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cvEmail">

                <EditText
                    android:id="@+id/edCode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="5dp"
                    android:background="@null"
                    android:ems="10"
                    android:inputType="text"
                    android:textColor="@color/edoctor_blue"
                    android:textSize="@dimen/middle_text" />
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cvPassword"
                android:layout_width="169dp"
                android:layout_height="23dp"
                android:layout_marginTop="16dp"
                android:backgroundTint="@color/white"
                app:cardCornerRadius="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cvCode">

                <EditText
                    android:id="@+id/edPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="5dp"
                    android:background="@null"
                    android:ems="10"
                    android:inputType="textPassword"
                    android:textColor="@color/edoctor_blue"
                    android:textSize="@dimen/middle_text" />
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cvRepeatPassword"
                android:layout_width="169dp"
                android:layout_height="23dp"
                android:layout_marginTop="16dp"
                android:backgroundTint="@color/white"
                app:cardCornerRadius="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cvPassword">

                <EditText
                    android:id="@+id/edRepeatPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="5dp"
                    android:background="@null"
                    android:ems="10"
                    android:inputType="text"
                    android:textColor="@color/edoctor_blue"
                    android:textSize="@dimen/middle_text" />
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/materialButton"
                android:layout_width="119dp"
                android:layout_height="40dp"
                android:layout_marginTop="19dp"
                android:backgroundTint="@color/white"
                android:gravity="center"
                android:text="@string/log_in_button"
                android:textColor="@color/edoctor_blue"
                app:cornerRadius="40dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cvRepeatPassword" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>